--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUb
                 <li class="a1">
                     <a href=" ">Categories</a>
                     <div class="a3">
-                        <a href=" #Electronics">Electronics</a>
-                        <a href=" #Fashion">Fashion</a>
+                        <a href=" #">Electronics</a>
+                        <a href=" #">Fashion</a>
                         <a href=" #">Appliances</a>
                         <a href=" #">Mobiles</a>
                         <a href=" #">Grocery</a>
